# orion_recognition

./: .gitignore  CMakeLists.txt  README.md  object_detector_new.py  package.xml  requirements.txt  requirements.yml  setup.py
launch/: realsense_d435i_driver.launch  recognition.launch
lightning_logs/0603_105755/: events.out.tfevents.1654250284.gnodea1.triton.cluster.149452.0  hparams.yaml
lightning_logs/0603_110252/: events.out.tfevents.1654250576.gnodea1.triton.cluster.149793.0  hparams.yaml
orion_recognition-benoit/: README.md  person_detection.py  subscriber.py
scripts/: bbox_publisher_node.py  check_for_BarDrink_server_node.py  check_for_object_server_node.py  detection_tf_publisher_node.py  download_athome_dataset.sh  face_publisher_node.py  pointing_server_node.py  pose_publisher_node.py  pose_tf_publisher_node.py  start_vision.tmux
src/: bbox_publisher.py  labels.txt  object_detector.py  person_detection.py  person_detection_bbox.py
src/orion_recognition/: MemoryManager.py  bbox_publisher.py  bbox_publisher_new.py  bbox_publisher_new.py~  bbox_publisher_old.py  bbox_utils.py  check_for_BarDrink_server.py  check_for_object_server.py  coco_labels2017.txt  colornames.py  detection_tf_publisher.py  face_detector_ros.py  face_publisher.py  face_publisher_new.py  label_ycb.txt  labels_short.txt  obj_detector_tensorrt.py  object_classifer.py  object_detector.py  object_detectorGDino.py  object_detector_new.py~  object_sizes.json  pointing_server.py  pose_detector_ros.py  pose_publisher.py  pose_tf_publisher.py  utils.py  yolov8_detect_and_track.py
src/orion_recognition/datasets/: athome_dataset.py  athome_labels_subset.txt  utils.py
src/orion_recognition/faster_rcnn/: README.md  coco_utils.py  engine.py  finetune_faster_rcnn.py  utils.py
src/orion_recognition/object_classifier/: load_resnet.py  object_classifer.py  pl_module.py  train_resnet.py  utils.py
src/orion_recognition/object_classifier/datasets/: README.md
src/orion_recognition/object_detection/: load_resnet.py  pl_module.py  train_resnet.py  utils.py
src/orion_recognition/trackers/: multi_tracker_zoo.py
src/orion_recognition/trackers/botsort/: bot_sort.py
src/orion_recognition/trackers/strongsort/: strong_sort.py
src/orion_recognition/util/: bbox_utils.py
