<?xml version="1.0"?>
<package format="2">
    <name>orion_recognition</name>
    <version>0.1.0</version>
    <description>3D Object Detection</description>

    <maintainer email="chiaman@robots.ox.ac.uk">Chia-Man Hung</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>message_filters</depend>
    <depend>python-numpy</depend>
    <depend>roslib</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>orion_actions</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>