<?xml version="1.0"?>
<package format="2">
    <name>orion_recognition</name>
    <version>1.0.0</version>
    <description>Orion Perception</description>

    <maintainer email="ana@robots.ox.ac.uk">Ana Deligny</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>message_filters</depend>
    <depend>python-numpy</depend>
    <depend>roslib</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>orion_actions</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
